--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="home_icon.png">
+    <link rel="shortcut icon" href="/assets/favicons/home_icon.png" type=image>
     <title>| Welcome Page |</title>
 </head>
 <body>
